# services-status

./: .gitignore  Cargo.toml  Dockerfile  README.md  gulpfile.js  package-lock.json
.github/workflows/: release.yml
JavaScript/: HtmlMain.js  HtmlMain.js.map  HtmlStaticElement.js  HtmlStaticElement.js.map  HtmlStatusBar.js  HtmlStatusBar.js.map  main.js  main.js.map
TypeScript/: HtmlMain.ts  HtmlStaticElement.ts  HtmlStatusBar.ts  contracts.d.ts  main.ts
src/: main.rs  settings.rs  telegram_api.rs
src/app_ctx/: app_context.rs  prometheus.rs
src/background/: mod.rs  services_pinger.rs  telegram_notifications.rs
src/http/: builder.rs  start_up.rs
src/http/controllers/home_controller/: index_action.rs  mod.rs
src/http/controllers/metrics_controller/: metrics_action.rs
src/http/controllers/status_controller/: get_status_action.rs  models.rs
src/http_server/: builder.rs  mod.rs  start_up.rs
src/http_server/controllers/status_controller/: get_status_action.rs  mod.rs  models.rs
src/models/: mod.rs  service_is_alive_model.rs
src/scripts/: get_sockets_list.rs  mod.rs  ping_service.rs
src/services_list/: mod.rs  service_description.rs  services_list.rs
src/timers/: services_pinger.rs  telegram_notifications.rs
wwwroot/css/: site.css
wwwroot/js/: app.js  jquery.js
