[package]
name = "services-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.8.3", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
    "macros",
] }

my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git" }
my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }

teloxide = "*"

tokio = { version = "*" }
hyper = { version = "*" }
tokio-util = "*"

serde = "*"
serde_derive = "*"
serde_yaml = "*"
serde_json = "*"
reqwest = "*"
signal-hook = "*"
async-trait = "*"
